# Do

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  browser.ipynb  demo.ipynb  install_first_time.sh  pyproject.toml  update_changelog.sh
.cursor/rules/: do.mdc  github-release.mdc  release-process.mdc  tenets.mdc
src/DoNew/see/processors/: web.py
src/DoNew/see/processors/web/scripts/: element_detection.js
src/donew/: __init__.py  envpaths.py  utils.py
src/donew/new/: __init__.py  runtime.py  types.py
src/donew/new/agents/: browse.py
src/donew/new/assistants/: browse.py  mcp_task.py  mcprun.py  new.py  restack.py
src/donew/new/doers/: __init__.py  super.py
src/donew/new/realm/provisions/: __init__.py  browse.py  mcprun.py  new.py  restack.py
src/donew/new/runtimes/: local.py
src/donew/scripts/web/: element_detection.js  highlight_elements.js  restore_text_markers.js  text_markers.js
src/donew/see/: __init__.py
src/donew/see/graph/: __init__.py
src/donew/see/processors/: __init__.py  web.py
tests/: conftest.py  test_kg_processor.py  test_knowledge_graph.py  test_mcp_task.py  test_new.py  test_restack.py  test_sync_wrapper.py  test_utils.py  test_web_processor.py
