[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Kenan Deniz", email = "kenan@unrealists.com"},
]
license = {text = "MIT"}
name = "donew"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.5"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "aiohttp>=3.9.1",
  "playwright>=1.40.0",
  "typing-extensions>=4.12.2",
  "tabulate>=0.9.0",
  "icecream>=2.1.4",
  "smolagents[litellm,mcp]>=1.4.1",
  "mcp[cli]>=1.2.0",
  "greenlet>=3.1.1",
  "tqdm>=4.67.1",
  "arize-phoenix>=7.12.0",
]
description = "A Python package for web processing and vision tasks with browser automation capabilities"
keywords = [
  "web automation",
  "vision",
  "browser",
  "playwright",
  "image processing",
  "knowledge graph",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=4.1.0",
  "black>=23.10.0",
  "isort>=5.3.2",
  "mypy>=1.14.0",
  "ruff>=0.8.4",
  "arize-phoenix>=7.12.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "openinference-instrumentation-smolagents>=0.1.0",
]
# Knowledge Graph dependencies
kg = [
  "glirel",
  "spacy",
  "gliner-spacy",
  "kuzu",
  "torch", # User can install CPU/CUDA version as needed
  "loguru",
  "sentencepiece",
  "protobuf<=3.20.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
exclude = ["*.__pycache__/**/*.pyc"]
include = ["donew*"]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=src/donew --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
ignore = []
line-length = 88
select = ["E", "F", "B", "I"]
target-version = "py311"
